修正了一些由于IDEA重建索引期间发生的问题，兼容性最低192.5728(2019.2)，亲测有效